--- a/es03.html
+++ b/es03.html
@@ -18,7 +18,11 @@
         </table>
         Inserire numero 1 <input type="number" id="input1">
         numero 2 <input type="number" id="input2"><br>
-        <button class='add'> + </button><button class='read'> Storage </button>
+        <button class='add'> + </button>
+        <button class='subtract'> - </button>
+        <button class='multiplication'> * </button>
+        <button class='division'> / </button><br>
+        <button class='read'> Storage </button>
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         
@@ -30,9 +34,29 @@
         <script>
             $(".add")
             .click(function() {
-                somma = parseInt($("#input1").val())+parseInt($("#input2").val());
+                var n1 = parseInt($("#input1").val());
+                var n2 = parseInt($("#input2").val());
+                
+                addition = n1+n2;
 
-                tRow="<tr><td>"+$("#input1").val()+"</td><td> + </td><td>"+$("#input2").val()+"</td><td>"+somma+"</td></tr>";
+                tRow="<tr><td>"+$("#input1").val()+"</td><td> + </td><td>"+$("#input2").val()+"</td><td>"+addition+"</td></tr>";
+                tBody=$("table tbody");
+                tBody.append(tRow);
+
+                storage.setItem(i, $("#input1").val()+"+"+$("#input2").val()+"="+addition);
+                i++;
+
+                $("#input1").val("");
+                $("#input2").val("");
+            });
+        </script>
+
+        <script>
+            $(".subtract")
+            .click(function() {
+                subtraction = n1-n2;
+
+                tRow="<tr><td>"+$("#input1").val()+"</td><td> + </td><td>"+$("#input2").val()+"</td><td>"+subtraction+"</td></tr>";
                 tBody=$("table tbody");
                 tBody.append(tRow);
 
